fix: enhance forced schema generation to correctly handle recursive dependents and suppress mapping leaks